--- a/demo/demo/myapp/templates/home.html
+++ b/demo/demo/myapp/templates/home.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %} {% block title %}home page{% endblock %}
 {% block content %}
-<p>home page</p>
+<p>home page
+</p>
 {% endblock %}
