--- a/LeafyLogic/LeafyBrain/templates/base.html
+++ b/LeafyLogic/LeafyBrain/templates/base.html
@@ -13,7 +13,11 @@
 <body>
     <header>
         <img>
-        <nav></nav>
+        <nav>
+            <a href="">Home</a>
+            <a href="">Dashboard</a>
+            <a href="">Reports</a>
+        </nav>
     </header>
     <main>{% block content %} {% endblock %}</main>
 </body>
