--- a/LeafyLogic/LeafyBrain/templates/base.html
+++ b/LeafyLogic/LeafyBrain/templates/base.html
@@ -16,7 +16,7 @@
 </head>
 <body>
     <header>
-        <img>
+        <img src="{%static 'Img/leaf_temp.jpg' %}">
         <nav>
             <a href="">Home</a>
             <a href="">Dashboard</a>
