--- a/LeafyLogic/LeafyBrain/static/SCSS/global.css
+++ b/LeafyLogic/LeafyBrain/static/SCSS/global.css
@@ -12,5 +12,21 @@ body, html {
 
 body {
   display: grid;
-  grid-template-columns: 1fr 3fr;
+  grid-template-columns: 1fr 4fr;
+}
+
+header {
+  display: flex;
+  flex-direction: column;
+  background-color: #9F9E89;
+  align-items: center;
+}
+header img {
+  width: 15vw;
+  margin: 40px 0;
+}
+header nav {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }/*# sourceMappingURL=global.css.map */
