--- a/LeafyLogic/LeafyBrain/static/SCSS/global.scss
+++ b/LeafyLogic/LeafyBrain/static/SCSS/global.scss
@@ -11,7 +11,36 @@ body, html {
     box-sizing: inherit;
 }
 
+//variables
+$main-bg: #ECE3D3;
+$panel-bg: #BFA886;
+$panel-sec: #DDC8A0;
+$main-fontcolor: #5C5243;
+$sec-fontcolor: #F0E4D2;
+
+$header-bg: #9F9E89;
+$link-bg: #B8BCA2;
+$link-bg-hover: #C5CAAD;
+$link-bg-pressed: #A7AA95;
+
 body {
     display: grid;
-    grid-template-columns: 1fr 3fr;
+    grid-template-columns: 1fr 4fr;
+}
+
+header {
+    display: flex;
+    flex-direction: column;
+    background-color: $header-bg;
+    align-items: center;
+
+    img {
+        width: 15vw;
+        margin: 40px 0;
+    }
+    nav {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
 }
