Made stuff in template

--- a/LeafyLogic/LeafyBrain/templates/home.html
+++ b/LeafyLogic/LeafyBrain/templates/home.html
@@ -1,4 +1,11 @@
 {% extends "base.html" %} {% block title %} Leafy Logic - Home {% endblock %}
 {% block content %}
-<p>this is the home page</p>
+<p>Latest Reading at xx/xx/xxxx - xx:xx:xx</p>
+<h1>Reports</h1>
+<h3>Search-bar</h3>
+<section>
+    <article>
+
+    </article>
+</section>
 {% endblock %}
