--- a/LeafyLogic/LeafyBrain/templates/base.html
+++ b/LeafyLogic/LeafyBrain/templates/base.html
@@ -13,6 +13,7 @@
     {% compress css %}
         <link rel="stylesheet" href="{%static 'SCSS/global.scss' %}" type="text/x-scss">
     {% endcompress %}
+    <script src="https://kit.fontawesome.com/9ce9532b81.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <header>
