--- a/LeafyLogic/LeafyBrain/static/SCSS/global.scss
+++ b/LeafyLogic/LeafyBrain/static/SCSS/global.scss
@@ -63,7 +63,7 @@ header {
             background-color: $link-bg;
             width: 80%;
             margin: 20px 0;
-            padding: 20px 0;
+            padding: 15px 0;
             border-radius: 10px;
             box-shadow: 0px 5px 10px -5px black;
             text-align: center;
@@ -77,5 +77,19 @@ header {
                 background-color: $link-bg-hover;
             }
         }
+    }
+}
+
+main{
+    display: flex;
+    flex-direction: column;
+    padding: 20px;
+
+    p{
+        margin: 0px;
+    }
+
+    h3{
+        align-self: flex-end;
     }
 }
