Changed link padding to vh

--- a/LeafyLogic/LeafyBrain/static/SCSS/global.scss
+++ b/LeafyLogic/LeafyBrain/static/SCSS/global.scss
@@ -62,8 +62,8 @@ header {
         a {
             background-color: $link-bg;
             width: 80%;
-            margin: 20px 0;
-            padding: 15px 0;
+            margin: 2vh 0;
+            padding: 1.7vh 0;
             border-radius: 10px;
             box-shadow: 0px 5px 10px -5px black;
             text-align: center;
