Styled report page base

--- a/LeafyLogic/LeafyBrain/templates/reports.html
+++ b/LeafyLogic/LeafyBrain/templates/reports.html
@@ -1,13 +1,12 @@
 {% extends "base.html" %} {% block title %} Leafy Logic - Reports {% endblock %}
 {% block content %}
 <p>Latest Reading at xx/xx/xxxx - xx:xx:xx</p>
-<section>
-<h1>Reports</h1>
-<h3>Search-bar</h3>
-</section>
-<section>
-    <article>
-
-    </article>
+<section class="main">
+    <section id="rep_header">
+        <h1>Reports</h1>
+        <h3>Search-bar</h3>
+    </section>
+    <section class="report_section">
+    </section>
 </section>
 {% endblock %}
