--- a/LeafyLogic/LeafyBrain/static/SCSS/global.scss
+++ b/LeafyLogic/LeafyBrain/static/SCSS/global.scss
@@ -82,14 +82,30 @@ header {
 
 main{
     display: flex;
+    align-items: center;
     flex-direction: column;
-    padding: 20px;
 
-    p{
-        margin: 0px;
+    p {
+        width: 95%;
+        margin-left: 5%;
     }
 
-    h3{
-        align-self: flex-end;
+    .main{
+        width: 90%;
+
+        #rep_header {
+            display: flex;
+            flex-direction: row;
+            justify-content: space-between;
+            align-items: center;
+        }
+
+        .report_section{
+            background-color: $panel-bg;
+            height: 400px;
+            width: 100%;
+            border-radius: 10px;
+            box-shadow: 0px 5px 10px -5px black;
+        }
     }
 }
