Made a commented for loop for div creation

--- a/LeafyLogic/LeafyBrain/templates/reports.html
+++ b/LeafyLogic/LeafyBrain/templates/reports.html
@@ -7,6 +7,13 @@
         <h3>Search-bar</h3>
     </section>
     <section class="report_section">
+        {%comment%}
+        {% for report in reports %}
+        <div class="report">
+            <p>{{}}</p>
+        </div>
+        {%endfor%}
+        {%endcomment%}
     </section>
 </section>
 {% endblock %}
