added home styling

--- a/LeafyLogic/LeafyBrain/templates/dashboard.html
+++ b/LeafyLogic/LeafyBrain/templates/dashboard.html
@@ -1,4 +1,26 @@
 {% extends "base.html" %} {% block title %} Leafy Logic - Dashboard {% endblock %}
 {% block content %}
+<p>Latest Reading at xx/xx/xxxx - xx:xx:xx</p>
 
+<section id="dash_main">
+    <section>
+
+    </section>
+    <section>
+        
+    </section>
+    <section>
+        
+    </section>
+    <section>
+        
+    </section>
+    <section>
+        
+    </section>
+    <section>
+        
+    </section>
+    
+</section>
 {% endblock %}
