--- a/LeafyLogic/LeafyBrain/templates/home.html
+++ b/LeafyLogic/LeafyBrain/templates/home.html
@@ -1,4 +1,17 @@
 {% extends "base.html" %} {% block title %} Leafy Logic - Home {% endblock %}
 {% block content %}
+<p>Latest Reading at xx/xx/xxxx - xx:xx:xx</p>
 
+<section id="home_main">
+    <h1>Devices</h1>
+
+    <section id="home_buttons">
+        <section class="device1">
+
+        </section>
+        <section class="device2">
+
+        </section>
+    </section>
+</section>
 {% endblock %}
