--- a/LeafyLogic/LeafyBrain/templates/dashboard.html
+++ b/LeafyLogic/LeafyBrain/templates/dashboard.html
@@ -3,23 +3,27 @@
 <p>Latest Reading at xx/xx/xxxx - xx:xx:xx</p>
 
 <section id="dash_main">
-    <section>
+    <section id="top_dash">
+        <section>
 
+        </section>
+        <section>
+            
+        </section>
+        <section>
+            
+        </section>
+        <section>
+            
+        </section>
     </section>
-    <section>
+    <section id="bottom_dash">
+        <section id="graph_sect">
         
-    </section>
-    <section>
-        
-    </section>
-    <section>
-        
-    </section>
-    <section>
-        
-    </section>
-    <section>
-        
+        </section>
+        <section id="device_sect">
+            
+        </section>
     </section>
     
 </section>
