--- a/LeafyLogic/LeafyBrain/static/SCSS/global.scss
+++ b/LeafyLogic/LeafyBrain/static/SCSS/global.scss
@@ -137,6 +137,11 @@ main{
 #dash_main{
     width: 90%;
 
+    h1 {
+        text-align: center;
+        font-size: 48px;
+    }
+
     #top_dash {
         display: flex;
         justify-content: space-around;
@@ -146,22 +151,27 @@ main{
             background-color: $panel-bg;
             width: 15vw;
             height: 30vh;
+            border-radius: 10px;
+            box-shadow: 0px 5px 10px -5px black;
         }
     }
     #bottom_dash {
         display: flex;
         justify-content: space-around;
 
-        #graph_sect {
+        section {
             background-color: $panel-bg;
-            width: 51vw;
+            border-radius: 10px;
+            box-shadow: 0px 5px 10px -5px black;
             height: 30vh;
         }
 
+        #graph_sect {
+            width: 51vw;
+        }
+
         #device_sect {
-            background-color: $panel-bg;
             width: 15vw;
-            height: 30vh;
         }
     }
 }
