--- a/LeafyLogic/LeafyBrain/templates/dashboard.html
+++ b/LeafyLogic/LeafyBrain/templates/dashboard.html
@@ -3,6 +3,7 @@
 <p>Latest Reading at xx/xx/xxxx - xx:xx:xx</p>
 
 <section id="dash_main">
+    <h1>Dashboard</h1>
     <section id="top_dash">
         <section>
 
