--- a/LeafyLogic/LeafyBrain/static/SCSS/global.scss
+++ b/LeafyLogic/LeafyBrain/static/SCSS/global.scss
@@ -107,6 +107,10 @@ main{
             border-radius: 10px;
             box-shadow: 0px 5px 10px -5px black;
         }
+
+        .reports{
+            color: null;
+        }
     }
 }
 
