--- a/LeafyLogic/LeafyBrain/templates/base.html
+++ b/LeafyLogic/LeafyBrain/templates/base.html
@@ -19,9 +19,9 @@
     <header>
         <img src="{%static 'Img/leaf_temp.jpg' %}">
         <nav>
-            <a href="">Home</a>
-            <a href="">Dashboard</a>
-            <a href="">Reports</a>
+            <a href="{% url 'home' %}">Home</a>
+            <a href="{% url 'dashboard' %}">Dashboard</a>
+            <a href="{% url 'reports' %}">Reports</a>
         </nav>
     </header>
     <main>{% block content %} {% endblock %}</main>
