--- a/LeafyLogic/LeafyBrain/templates/home.html
+++ b/LeafyLogic/LeafyBrain/templates/home.html
@@ -4,13 +4,17 @@
 
 <section id="home_main">
     <h1>Devices</h1>
-
+ 
     <section id="home_buttons">
         <section class="device1">
-
+            <h2>{{names.0}}</h2>
+            <h3>{{labels.0}}</h3>
+            <a> Dashboard </a>
         </section>
         <section class="device2">
-
+            <h2>{{names.1}}</h2>
+            <h3>{{labels.0}}</h3> 
+            <a> Dashboard </a>   
         </section>
     </section>
 </section>
