--- a/LeafyLogic/LeafyBrain/static/SCSS/global.scss
+++ b/LeafyLogic/LeafyBrain/static/SCSS/global.scss
@@ -33,6 +33,7 @@ $para-font: "Noto Sans", sans-serif;
 
 
 //body styling
+
 body {
     display: grid;
     grid-template-columns: 1fr 4fr;
@@ -112,6 +113,9 @@ main{
             width: 100%;
             border-radius: 10px;
             box-shadow: 0px 5px 10px -5px black;
+            overflow: scroll;
+            overflow-x: hidden;
+            }
 
                 .device_name{
                     width: 95%;
@@ -129,7 +133,7 @@ main{
 
         
     }
-}
+
 
 
 #home_main {
