Removed the main dashboard nav and added it to the device sections

--- a/LeafyLogic/LeafyBrain/templates/home.html
+++ b/LeafyLogic/LeafyBrain/templates/home.html
@@ -9,12 +9,12 @@
         <section class="device1">
             <h2>{{names.0}}</h2>
             <h3>{{labels.0}}</h3>
-            <a> Dashboard </a>
+            <a href="{% url 'dashboard' %}">Dashboard</a>
         </section>
         <section class="device2">
             <h2>{{names.1}}</h2>
             <h3>{{labels.0}}</h3> 
-            <a> Dashboard </a>   
+            <a href="{% url 'dashboard' %}">Dashboard</a>  
         </section>
     </section>
 </section>
