--- a/LeafyLogic/LeafyBrain/templates/dashboard.html
+++ b/LeafyLogic/LeafyBrain/templates/dashboard.html
@@ -6,7 +6,7 @@
     <h1>Dashboard</h1>
     <section id="top_dash">
         <section>
-    
+            {{human_name.1}}
         </section>
         <section>
             
