--- a/LeafyLogic/LeafyBrain/templates/home.html
+++ b/LeafyLogic/LeafyBrain/templates/home.html
@@ -6,11 +6,11 @@
     <h1>Devices</h1>
  
     <section id="home_buttons">
-        {% for name in device_names %}
+        {% for device in unique_devices %}
             <section class="device1">
-                <h2>{{name.name}}</h2>
+                <h2>{{device.name}}</h2>
                 <h3>The Field</h3>
-                <a href="{% url 'dashboard' %}">Dashboard</a>
+                <a href="{% url 'dashboard' device_id=device.device_id %}">Dashboard</a>
             </section>
         {% endfor %}
     </section>
