--- a/LeafyLogic/LeafyBrain/static/SCSS/global.scss
+++ b/LeafyLogic/LeafyBrain/static/SCSS/global.scss
@@ -260,11 +260,31 @@ main{
         margin: 5vh 0;
 
         section {
+            display: flex;
             background-color: $panel-bg;
             width: 15vw;
             height: 30vh;
             border-radius: 10px;
             box-shadow: 0px 5px 10px -5px black;
+            flex-wrap: wrap;
+            justify-content: center;
+
+            .h3-dash{
+                height: 5%;
+                text-align: center;
+                font-family: $title-font;
+            }
+
+            .p-sect-dash{
+                width: 80%;
+                border-radius: 10px;
+                background-color: $panel-sec;
+                text-align: center;
+                align-self: center;
+                font-family: $para-font;
+                font-size: 24px;
+            }
+
         }
     }
     #bottom_dash {
