--- a/LeafyLogic/LeafyBrain/templates/dashboard.html
+++ b/LeafyLogic/LeafyBrain/templates/dashboard.html
@@ -6,9 +6,9 @@
     <h1>Dashboard</h1>
     <section id="top_dash">
         {% for name, value in latest_values.items %}
-            <section class="" >
-                <h3>{{ name }}</h3>
-                <p>{{ value }}</p>
+            <section>
+                <h3 class="h3-dash">{{ name }}</h3>
+                <p class="p-sect-dash">{{ value }}</p>
             </section>
         {% endfor %}
     </section>
