Added details and summary for styling

--- a/LeafyLogic/LeafyBrain/templates/reports.html
+++ b/LeafyLogic/LeafyBrain/templates/reports.html
@@ -7,9 +7,11 @@
     </section>
     <section class="report_section">
         {% for report in reports %}
-            <a class="{{device_name}} device_name">
+            <details>
+            <summary class="{{device_name}} device_name">
                 {{report.name}} - {{report.last_seen}}
-            </a>
+            </summary>
+            </details>
         {% endfor %}
     </section>
 </section>
