--- a/LeafyLogic/LeafyBrain/static/SCSS/global.scss
+++ b/LeafyLogic/LeafyBrain/static/SCSS/global.scss
@@ -118,7 +118,7 @@ main{
         .report_section{
             display: flex;
             flex-direction: column;
-            align-items: center;
+            padding: 10px;
             gap: 10px;
             background-color: $panel-bg;
             height: 70vh;
@@ -128,9 +128,8 @@ main{
             overflow: scroll;
             overflow-x: hidden;
             }
-
                 .device_name{
-                    width: 95%;
+                    width: 100%;
                     text-align: center;
                     background-color: $panel-sec;
                     border-radius: 5px;
