replaced logo and added favicon

--- a/LeafyLogic/LeafyBrain/templates/base.html
+++ b/LeafyLogic/LeafyBrain/templates/base.html
@@ -14,10 +14,11 @@
         <link rel="stylesheet" href="{%static 'SCSS/global.scss' %}" type="text/x-scss">
     {% endcompress %}
     <script src="https://kit.fontawesome.com/9ce9532b81.js" crossorigin="anonymous"></script>
+    <link rel="icon" type="image/x-icon" href="{% static "Img/LeafyFavicon.png" %}">
 </head>
 <body>
     <header>
-        <img src="{%static 'Img/leaf_temp.jpg' %}">
+        <img src="{%static 'Img/LeafyLogo.png' %}">
         <nav>
             <a href="{% url 'home' %}">Home</a>
             <a href="{% url 'reports' %}">Reports</a>
