--- a/LeafyLogic/LeafyBrain/static/SCSS/global.scss
+++ b/LeafyLogic/LeafyBrain/static/SCSS/global.scss
@@ -31,12 +31,14 @@ $link-bg-pressed: #A7AA95;
 $title-font: "Roboto Slab", serif;
 $para-font: "Noto Sans", sans-serif;
 
+$shadow: 0px 5px 10px -5px black;
+
 
 section::-webkit-scrollbar{
     background-color: $panel-bg;
     border-radius: 10px;
     width: 10px;
-    box-shadow: 0px 5px 10px -5px black;
+    box-shadow: $shadow;
 }
 
 section::-webkit-scrollbar-thumb{
@@ -63,7 +65,12 @@ header {
 
     img {
         width: 15vw;
-        margin: 40px 0;
+        margin-top: 40px;
+    }
+
+    h1 {
+        color: #fcfde2;
+        font-family: $title-font;
     }
 
     nav {
@@ -78,7 +85,7 @@ header {
             margin: 2vh 0;
             padding: 1.7vh 0;
             border-radius: 10px;
-            box-shadow: 0px 5px 10px -5px black;
+            box-shadow: $shadow;
             text-align: center;
             text-decoration: none;
             color: black;
@@ -124,7 +131,7 @@ main{
             height: 70vh;
             width: 100%;
             border-radius: 10px;
-            box-shadow: 0px 5px 10px -5px black;
+            box-shadow: $shadow;
             overflow: scroll;
             overflow-x: hidden;
             }
@@ -133,7 +140,7 @@ main{
                     text-align: center;
                     background-color: $panel-sec;
                     border-radius: 5px;
-                    box-shadow: 0px 5px 10px -5px black;
+                    box-shadow: $shadow;
                     border-width: 2px;
                     font-family: $para-font;
                     font-size: 14px;
@@ -144,8 +151,6 @@ main{
 
         
     }
-
-
 
 #home_main {
     width: 90%;
@@ -161,61 +166,30 @@ main{
         justify-content: space-around;
         width: 100%;
     
-        section{
+        .device{
             background-color: $panel-bg;
-            height: 45vh;
+            height: 35vh;
             width: 20vw;
             border-radius: 10px;
-            box-shadow: 0px 5px 10px -5px black;
-        }
-           .device1{
-                display: flex;
-                flex-direction: column;
-                justify-content: space-around;
+            box-shadow: $shadow;
+            padding: 0 15px 15px 15px;
 
-                    h2{
-                        align-self: center;
-                        font-family: $title-font;
-                    }
+            display: flex;
+            flex-direction: column;
+            justify-content: space-around;
 
-                    h3{
-                        align-self: center;
-                        font-family: $para-font;
-                    }
-
-                    a{
-                        align-self: center;
-                        background-color: $panel-bg;
-                        width: 80%;
-                        margin: 2vh 0;
-                        padding: 1.7vh 0;
-                        border-radius: 10px;
-                        box-shadow: 0px 5px 10px -5px black;
-                        text-align: center;
-                        text-decoration: none;
-                        color: black;
-                        font-family: $para-font;
-                        font-size: 14px;
-
-                        &:hover{
-                            background-color: $panel-sec;
-                        }
-                    }
-
-            
-                    
-
+            h2 {
+                align-self: center;
+                font-family: $title-font;
             }
 
-            .device2{
+            .pannelsec {
+                background-color: $panel-sec;
+                height: 100%;
                 display: flex;
                 flex-direction: column;
                 justify-content: space-around;
-
-                h2{
-                    align-self: center;
-                    font-family: $title-font;
-                }
+                border-radius: 10px;
 
                 h3{
                     align-self: center;
@@ -229,7 +203,7 @@ main{
                     margin: 2vh 0;
                     padding: 1.7vh 0;
                     border-radius: 10px;
-                    box-shadow: 0px 5px 10px -5px black;
+                    box-shadow: $shadow;
                     text-align: center;
                     text-decoration: none;
                     color: black;
@@ -241,6 +215,7 @@ main{
                     }
                 }
             }
+        }
     }
 }
 
@@ -264,7 +239,7 @@ main{
             width: 15vw;
             height: 30vh;
             border-radius: 10px;
-            box-shadow: 0px 5px 10px -5px black;
+            box-shadow: $shadow;
             flex-wrap: wrap;
             justify-content: center;
 
@@ -293,7 +268,7 @@ main{
         section {
             background-color: $panel-bg;
             border-radius: 10px;
-            box-shadow: 0px 5px 10px -5px black;
+            box-shadow: $shadow;
             height: 30vh;
         }
 
