--- a/LeafyLogic/LeafyBrain/templates/base.html
+++ b/LeafyLogic/LeafyBrain/templates/base.html
@@ -19,6 +19,7 @@
 <body>
     <header>
         <img src="{%static 'Img/LeafyLogo.png' %}">
+        <h1>LeafyLogic</h1>
         <nav>
             <a href="{% url 'home' %}">Home</a>
             <a href="{% url 'reports' %}">Reports</a>
