--- a/LeafyLogic/LeafyBrain/templates/dashboard.html
+++ b/LeafyLogic/LeafyBrain/templates/dashboard.html
@@ -6,7 +6,7 @@
     <h1>Dashboard</h1>
     <section id="top_dash">
         {% for name, value in latest_values.items %}
-            <section>
+            <section class="data-panel">
                 <h3 class="h3-dash">{{ name }}</h3>
                 <p class="p-sect-dash">{{ value }}</p>
             </section>
