--- a/LeafyLogic/LeafyBrain/static/SCSS/global.scss
+++ b/LeafyLogic/LeafyBrain/static/SCSS/global.scss
@@ -221,6 +221,7 @@ main{
 
 #dash_main{
     width: 90%;
+    padding-bottom: 10px;
 
     h1 {
         text-align: center;
@@ -230,8 +231,10 @@ main{
 
     #top_dash {
         display: flex;
-        justify-content: space-around;
-        margin: 5vh 0;
+        max-width: 90%;
+        flex-wrap: wrap;
+        margin-bottom: 10px;
+        gap: 10px;
 
         section {
             display: flex;
@@ -239,6 +242,7 @@ main{
             width: 15vw;
             height: 30vh;
             border-radius: 10px;
+            // margin-bottom: 10px;
             box-shadow: $shadow;
             flex-wrap: wrap;
             justify-content: center;
