--- a/LeafyLogic/LeafyBrain/static/SCSS/global.scss
+++ b/LeafyLogic/LeafyBrain/static/SCSS/global.scss
@@ -220,6 +220,9 @@ main{
 }
 
 #dash_main{
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
     width: 90%;
     padding-bottom: 10px;
 
@@ -230,19 +233,17 @@ main{
     }
 
     #top_dash {
-        display: flex;
-        max-width: 90%;
-        flex-wrap: wrap;
+        display: grid;
+        grid-template-columns: repeat(4, 1fr);
+        width: 100%;
         margin-bottom: 10px;
         gap: 10px;
 
         section {
             display: flex;
             background-color: $panel-bg;
-            width: 15vw;
             height: 30vh;
             border-radius: 10px;
-            // margin-bottom: 10px;
             box-shadow: $shadow;
             flex-wrap: wrap;
             justify-content: center;
@@ -268,6 +269,7 @@ main{
     #bottom_dash {
         display: flex;
         justify-content: space-around;
+        width: 100%;
 
         section {
             background-color: $panel-bg;
@@ -277,7 +279,7 @@ main{
         }
 
         #graph_sect {
-            width: 51vw;
+            width: 100%;
         }
 
         #device_sect {
