--- a/LeafyLogic/LeafyBrain/templates/dashboard.html
+++ b/LeafyLogic/LeafyBrain/templates/dashboard.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %} {% block title %} Leafy Logic - Dashboard {% endblock %}
 {% block content %}
-<p>Latest Reading at xx/xx/xxxx - xx:xx:xx</p>
+<p id="Latest">Latest Reading at xx/xx/xxxx - xx:xx:xx</p>
 
 <section id="dash_main">
     <h1>Dashboard</h1>
