--- a/LeafyLogic/LeafyBrain/templates/dashboard.html
+++ b/LeafyLogic/LeafyBrain/templates/dashboard.html
@@ -4,6 +4,8 @@
 <script>
     var deviceJsonData = JSON.parse('{{ deviceJson|safe }}');
     console.log(deviceJsonData);
+    var dataJson = JSON.parse('{{ dataPointJson|safe }}');
+    console.log(dataJson);
     // Now you can use deviceJsonData in your JavaScript code
     // For example, use it to populate charts or tables
 </script>
