--- a/LeafyLogic/LeafyBrain/templates/dashboard.html
+++ b/LeafyLogic/LeafyBrain/templates/dashboard.html
@@ -21,7 +21,7 @@
             let percentageX = division * objectX.value;
 
             canvas.style.background = `linear-gradient(to right, purple ${percentageX}%, blue`;
-            title.textContent = api
+            title.textContent = objectX.readableName
         }
 
         graph('relative_humidity_events');
