--- a/LeafyLogic/LeafyBrain/templates/dashboard.html
+++ b/LeafyLogic/LeafyBrain/templates/dashboard.html
@@ -20,7 +20,7 @@
 
             let percentageX = division * objectX.value;
 
-            canvas.style.background = `linear-gradient(to right, purple ${percentageX}%, blue`;
+            canvas.style.background = `linear-gradient(to top, purple ${percentageX}%, blue`;
             title.textContent = objectX.readableName
         }
 
@@ -28,8 +28,10 @@
     });
 </script>
 
+<h1>Dashboard</h1>
+
 <section id="dash_main">
-    <h1>Dashboard</h1>
+    
     <section id="top_dash">
         {% for data_point in latest_values %}
             <section class="data-panel">
@@ -40,7 +42,7 @@
     </section>
     <section id="bottom_dash">
         <section id="graph_sect">
-            <h1 id="graph-title"></h1>
+            <h3 id="graph-title" class="h3-dash"></h3>
             <section id="graph-canvas"></section>
         </section>
     </section>  
