--- a/LeafyLogic/LeafyBrain/templates/dashboard.html
+++ b/LeafyLogic/LeafyBrain/templates/dashboard.html
@@ -1,6 +1,11 @@
 {% extends "base.html" %} {% block title %} Leafy Logic - Dashboard {% endblock %}
 {% block content %}
-<p>Latest Reading at xx/xx/xxxx - xx:xx:xx</p>
+{% load static %}
+
+<section id="Latest">
+    <a href="{% url 'home' %}"><img src="{% static 'Img/left-arrow.png' %}"></a>
+    <p>Latest Reading at xx/xx/xxxx - xx:xx:xx</p>
+</section>
 
 <script>
     document.addEventListener("DOMContentLoaded", function() {
