Fixed the graph fully/added name mapping name

--- a/LeafyLogic/LeafyBrain/templates/dashboard.html
+++ b/LeafyLogic/LeafyBrain/templates/dashboard.html
@@ -25,7 +25,7 @@
 
             let percentageX = division * objectX.value;
 
-            canvas.style.background = `linear-gradient(to top, purple ${percentageX}%, blue`;
+            canvas.style.background = `linear-gradient(to top, rgb(78, 60, 129) ${percentageX}%, rgb(103, 136, 180)`;
             title.textContent = objectX.readableName
         }
 
