--- a/LeafyLogic/LeafyBrain/static/SCSS/global.scss
+++ b/LeafyLogic/LeafyBrain/static/SCSS/global.scss
@@ -283,7 +283,7 @@ main{
         #graph-canvas {
             width: 70%;
             height: 90%;
-            background-color: #5C5243;
+            background-color: #8b8b8b;
         }
 
         #device_sect {
